--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.7",
     "custom-cursor-react": "^1.0.5",
     "gray-matter": "^4.0.3",
@@ -21,10 +22,12 @@
     "react": "18.1.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.1.0",
-    "react-markdown": "^8.0.3",
+    "react-intersection-observer": "^9.16.0",
+    "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.3.4",
     "remark": "^14.0.2",
+    "remark-gfm": "^4.0.1",
     "remark-html": "^15.0.1",
     "styled-components": "^5.3.5",
     "tailwindcss": "^3.0.24",
@@ -33,5 +36,10 @@
   "devDependencies": {
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6"
+  },
+  "overrides": {
+    "custom-cursor-react": {
+      "react": "^18.0.0"
+    }
   }
 }
